W-12412013: Initial implementation.