@@ -32,8 +32,13 @@ public final class JpmsUtils {
   private static final String REQUIRED_ADD_MODULES =
       "--add-modules="
           + "java.se,"
+          + "org.mule.boot.tanuki,"
           + "org.mule.runtime.jpms.utils,"
           + "com.fasterxml.jackson.core";
+  private static final String REQUIRED_CE_BOOT_ADD_READS =
+      "--add-reads=org.mule.boot.tanuki=org.mule.boot";
+  private static final String REQUIRED_BOOT_ADD_READS =
+      "--add-reads=org.mule.boot.tanuki=com.mulesoft.mule.boot";
   private static final String REQUIRED_CE_BOOT_ADD_EXPORTS =
       "--add-exports=org.mule.boot/org.mule.runtime.module.reboot=ALL-UNNAMED";
   private static final String REQUIRED_BOOT_ADD_EXPORTS =
@@ -67,6 +72,8 @@ public final class JpmsUtils {
             || arg.startsWith("--add-reads")
             || arg.startsWith("--patch-module"))
         .filter(arg -> !(arg.equals(REQUIRED_ADD_MODULES)
+            || arg.equals(REQUIRED_CE_BOOT_ADD_READS)
+            || arg.equals(REQUIRED_BOOT_ADD_READS)
             || arg.equals(REQUIRED_CE_BOOT_ADD_EXPORTS)
             || arg.equals(REQUIRED_BOOT_ADD_EXPORTS)
             || arg.equals(REQUIRED_ADD_OPENS)))
